--- a/src/components/videos-table/videos-table.component.scss
+++ b/src/components/videos-table/videos-table.component.scss
@@ -167,6 +167,16 @@
             color: #4caf50;
             font-size: 12px;
             margin-left: 8px;
+
+            .open-file-btn {
+              margin-left: 4px;
+
+              mat-icon {
+                font-size: 16px;
+                width: 16px;
+                height: 16px;
+              }
+            }
           }
 
           .conversion-error {
