Amélioration de la section de conversion et mise à jour de la gestion des états
- Refactorisation de la section de conversion pour utiliser des méthodes calculées afin de récupérer la progression et le résultat de la conversion, améliorant ainsi la clarté du code.
- Mise à jour de l'interface utilisateur pour afficher correctement les informations de progression et de résultat, y compris les états de succès et d'erreur.
- Ajout de la gestion des chemins de vidéo actuels pour une meilleure accessibilité des données de conversion.

Ces changements visent à améliorer l'expérience utilisateur et à rendre le processus de conversion plus réactif et informatif.

--- a/src/components/video-details/video-details.component.html
+++ b/src/components/video-details/video-details.component.html
@@ -1,67 +1,68 @@
 @if (currentVideo()) {
-<div class="video-details-container">
-  <div class="details-header">
-    <h4>Détails d'optimisation</h4>
-    <button mat-icon-button (click)="onCloseDetails()">
-      <mat-icon>close</mat-icon>
-    </button>
+  <div class="video-details-container">
+    <div class="details-header">
+      <h4>Détails d'optimisation</h4>
+      <button mat-icon-button (click)="onCloseDetails()">
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
+
+    <!-- Informations du film -->
+    @if (currentVideo()?.movieInfo) {
+      <app-movie-info
+        [movieInfo]="currentVideo()!.movieInfo"
+        [showAlternativesButton]="
+          !!(
+            currentVideo()?.movieAlternatives &&
+            (currentVideo()!.movieAlternatives!.alternatives.length || 0) > 1
+          )
+        "
+        (openAlternatives)="onOpenMovieAlternatives()"
+        (openManualSearch)="onManualSearch()"
+      >
+      </app-movie-info>
+    }
+
+    <!-- Technical Details -->
+    <app-technical-details [video]="currentVideo()!"></app-technical-details>
+
+    <!-- Audio Tracks -->
+    <app-audio-tracks-section
+      [audioTracks]="audioTracks"
+      [selectedTracks]="selectedAudioTracks"
+      (tracksChanged)="onAudioTracksChanged($event)"
+    ></app-audio-tracks-section>
+
+    <!-- Subtitles -->
+    <app-subtitle-tracks-section
+      [subtitleTracks]="subtitleTracks"
+      [selectedTracks]="selectedSubtitleTracks"
+      (tracksChanged)="onSubtitleTracksChanged($event)"
+    ></app-subtitle-tracks-section>
+
+    <!-- Output Configuration -->
+    <app-output-config-section
+      [outputConfig]="outputConfig()"
+      [generatedFilename]="generatedFilename()"
+      [currentOutputPath]="getCurrentOutputPath()"
+      (configChanged)="onConfigChange($event)"
+      (filenameChanged)="onFilenameChange($event)"
+      (selectOutputPath)="selectCustomOutputPath()"
+    ></app-output-config-section>
+
+    <!-- Conversion Section -->
+    <app-conversion-section
+      [isConverting]="conversionState.isConverting"
+      [hasSelectedVideo]="!!currentVideo()"
+      [conversionState]="conversionState"
+      [currentVideoPath]="currentVideo()?.path || null"
+      (startConversion)="startConversion()"
+      (stopConversion)="stopConversion()"
+    ></app-conversion-section>
   </div>
-
-  <!-- Informations du film -->
-  @if (currentVideo()?.movieInfo) {
-  <app-movie-info
-    [movieInfo]="currentVideo()!.movieInfo"
-    [showAlternativesButton]="
-      !!(
-        currentVideo()?.movieAlternatives &&
-        (currentVideo()!.movieAlternatives!.alternatives.length || 0) > 1
-      )
-    "
-    (openAlternatives)="onOpenMovieAlternatives()"
-    (openManualSearch)="onManualSearch()"
-  >
-  </app-movie-info>
-  }
-
-  <!-- Technical Details -->
-  <app-technical-details [video]="currentVideo()!"></app-technical-details>
-
-  <!-- Audio Tracks -->
-  <app-audio-tracks-section
-    [audioTracks]="audioTracks"
-    [selectedTracks]="selectedAudioTracks"
-    (tracksChanged)="onAudioTracksChanged($event)"
-  ></app-audio-tracks-section>
-
-  <!-- Subtitles -->
-  <app-subtitle-tracks-section
-    [subtitleTracks]="subtitleTracks"
-    [selectedTracks]="selectedSubtitleTracks"
-    (tracksChanged)="onSubtitleTracksChanged($event)"
-  ></app-subtitle-tracks-section>
-
-  <!-- Output Configuration -->
-  <app-output-config-section
-    [outputConfig]="outputConfig()"
-    [generatedFilename]="generatedFilename()"
-    [currentOutputPath]="getCurrentOutputPath()"
-    (configChanged)="onConfigChange($event)"
-    (filenameChanged)="onFilenameChange($event)"
-    (selectOutputPath)="selectCustomOutputPath()"
-  ></app-output-config-section>
-
-  <!-- Conversion Section -->
-  <app-conversion-section
-    [isConverting]="conversionState.isConverting"
-    [hasSelectedVideo]="!!currentVideo()"
-    [conversionState]="conversionState"
-    (startConversion)="startConversion()"
-    (stopConversion)="stopConversion()"
-  ></app-conversion-section>
-</div>
 } @else {
-<div class="no-selection">
-  <mat-icon>info</mat-icon>
-  <p>Select a video to view optimization details</p>
-</div>
+  <div class="no-selection">
+    <mat-icon>info</mat-icon>
+    <p>Select a video to view optimization details</p>
+  </div>
 }
