--- a/src/components/conversion-section/conversion-section.component.html
+++ b/src/components/conversion-section/conversion-section.component.html
@@ -2,113 +2,114 @@
   <h5>Conversion</h5>
 
   @if (isConverting()) {
-  <div class="conversion-progress">
-    <div class="progress-header">
-      <span class="progress-status">{{
-        conversionState().progress?.status || "Converting..."
-      }}</span>
-      <span class="progress-percentage">{{
-        formatProgress(conversionState().progress?.progress || 0)
-      }}</span>
-    </div>
-
-    <mat-progress-bar
-      mode="determinate"
-      [value]="(conversionState().progress?.progress || 0) * 100"
-      class="progress-bar"
-    ></mat-progress-bar>
-
-    @if (conversionState().progress) {
-    <div class="progress-details">
-      <div class="progress-info">
-        <span
-          >Elapsed Time:
-          {{ formatTime(conversionState().progress.current_time) }}</span
-        >
-        <span
-          >Total Duration:
-          {{ formatTime(conversionState().progress.total_time) }}</span
-        >
+    <div class="conversion-progress">
+      <div class="progress-header">
+        <span class="progress-status">{{
+          getCurrentProgress()?.status || "Converting..."
+        }}</span>
+        <span class="progress-percentage">{{
+          formatProgress(getCurrentProgress()?.progress || 0)
+        }}</span>
       </div>
-      @if (conversionState().progress.eta > 0) {
-      <div class="progress-eta">
-        <span
-          >Time Remaining:
-          {{ formatTime(conversionState().progress.eta) }}</span
-        >
-      </div>
+
+      <mat-progress-bar
+        mode="determinate"
+        [value]="(getCurrentProgress()?.progress || 0) * 100"
+        class="progress-bar"
+      ></mat-progress-bar>
+
+      @if (getCurrentProgress()) {
+        <div class="progress-details">
+          <div class="progress-info">
+            <span
+              >Elapsed Time:
+              {{ formatTime(getCurrentProgress()!.current_time) }}</span
+            >
+            <span
+              >Total Duration:
+              {{ formatTime(getCurrentProgress()!.total_time) }}</span
+            >
+          </div>
+          @if (getCurrentProgress()!.eta > 0) {
+            <div class="progress-eta">
+              <span
+                >Time Remaining:
+                {{ formatTime(getCurrentProgress()!.eta) }}</span
+              >
+            </div>
+          }
+        </div>
       }
-    </div>
-    }
 
+      <div class="conversion-actions">
+        <button
+          mat-raised-button
+          color="warn"
+          (click)="stopConversion.emit()"
+          class="stop-button"
+        >
+          <mat-icon>stop</mat-icon>
+          Stop
+        </button>
+      </div>
+    </div>
+  } @else {
     <div class="conversion-actions">
       <button
         mat-raised-button
-        color="warn"
-        (click)="stopConversion.emit()"
-        class="stop-button"
+        color="primary"
+        (click)="startConversion.emit()"
+        [disabled]="!hasSelectedVideo()"
+        class="start-button"
       >
-        <mat-icon>stop</mat-icon>
-        Stop
+        <mat-icon>play_arrow</mat-icon>
+        Start Conversion
       </button>
     </div>
-  </div>
-  } @else {
-  <div class="conversion-actions">
-    <button
-      mat-raised-button
-      color="primary"
-      (click)="startConversion.emit()"
-      [disabled]="!hasSelectedVideo()"
-      class="start-button"
+  }
+  @if (getCurrentResult()) {
+    <div
+      class="conversion-result"
+      [class.success]="getCurrentResult()!.success"
+      [class.error]="!getCurrentResult()!.success"
     >
-      <mat-icon>play_arrow</mat-icon>
-      Start Conversion
-    </button>
-  </div>
-  } @if (conversionState().result) {
-  <div
-    class="conversion-result"
-    [class.success]="conversionState().result.success"
-    [class.error]="!conversionState().result.success"
-  >
-    @if (conversionState().result.success) {
-    <div class="result-success">
-      <mat-icon>check_circle</mat-icon>
-      <div class="result-content">
-        <h6>Conversion Successful!</h6>
-        <p>File created: {{ conversionState().result.output_path }}</p>
-        <p>Duration: {{ formatTime(conversionState().result.duration) }}</p>
-        <div class="result-actions">
-          <button
-            mat-stroked-button
-            color="primary"
-            (click)="openOutputFile()"
-            class="open-file-button"
-          >
-            <mat-icon>play_circle</mat-icon>
-            Open File
-          </button>
-          <button
-            mat-stroked-button
-            (click)="openFileLocation()"
-            class="open-location-button"
-          >
-            <mat-icon>folder_open</mat-icon>
-            Open Location
-          </button>
+      @if (getCurrentResult()!.success) {
+        <div class="result-success">
+          <mat-icon>check_circle</mat-icon>
+          <div class="result-content">
+            <h6>Conversion Successful!</h6>
+            <p>File created: {{ getCurrentResult()!.output_path }}</p>
+            <p>Duration: {{ formatTime(getCurrentResult()!.duration) }}</p>
+            <div class="result-actions">
+              <button
+                mat-stroked-button
+                color="primary"
+                (click)="openOutputFile()"
+                class="open-file-button"
+              >
+                <mat-icon>play_circle</mat-icon>
+                Open File
+              </button>
+              <button
+                mat-stroked-button
+                (click)="openFileLocation()"
+                class="open-location-button"
+              >
+                <mat-icon>folder_open</mat-icon>
+                Open Location
+              </button>
+            </div>
+          </div>
         </div>
-      </div>
+      } @else {
+        <div class="result-error">
+          <mat-icon>error</mat-icon>
+          <div class="result-content">
+            <h6>Conversion Failed</h6>
+            <p>{{ getCurrentResult()!.error }}</p>
+          </div>
+        </div>
+      }
     </div>
-    } @else {
-    <div class="result-error">
-      <mat-icon>error</mat-icon>
-      <div class="result-content">
-        <h6>Conversion Failed</h6>
-        <p>{{ conversionState().result.error }}</p>
-      </div>
-    </div>
-    }
-  </div>
   }
 </div>
